# rag_test

./: .gitignore  Qwen3_14B_finetune.ipynb  README-Copy1.md  baseline.ipynb  check.py  extract_json_array.py  get_text_embedding.py  mineru_parse_pdf.py  mineru_pipeline_all.py  pyproject.toml  rag_from_page_chunks.py  rag_top1_pred.json  requirements.txt  start.sh  test.py
image_utils/: async_image_analysis.py  image_analysis_utils.py  prompts.py
test_data/: table_test.json
